# mini-agent

./: .env.example  .env.test  .gitignore  Dockerfile  LICENSE  README.md  available_tools.py  chat_completion.py  config.py  format.sh  main.py  main_simple.py  main_with_db.py  message.py  planning.py  pyproject.toml  pytest.ini  requirements.txt  run-simple.sh  run.sh  story.example.txt  tool_call.py  tools.json  utils.py
.github/workflows/: ci.yml
backend/: .env.example  .env.test  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
backend/scripts/: run.sh  test.sh
backend/src/alembic/: env.py
backend/src/alembic/versions/: 7184f9ae75fb_initial_migration.py
backend/src/app/: database.py  embedding_manager.py  init_db.py  main.py  memory_manager.py  websocket_manager.py
backend/src/app/api/: deps.py  main.py
backend/src/app/api/routes/: assistant_memory.py  assistant_memory_embedding.py  assistants.py  conversations.py  messages.py  websocket.py
backend/src/app/core/: config.py  security.py
backend/src/app/crud/: __init__.py  base.py  crud_assistant.py  crud_assistant_memory.py  crud_assistant_memory_embedding.py  crud_base.py  crud_conversation.py  crud_message.py
backend/src/app/models/: __init__.py  assistant.py  assistant_memory.py  conversation.py  message.py
backend/src/app/schemas/: __init__.py  assistant.py  assistant_memory.py  assistant_memory_embedding.py  conversation.py  event_message.py  message.py
backend/tests/: client_wrapper.py  conftest.py  test_main.py  test_websocket.py
backend/tests/integration/: test_assistant.py  test_conversation.py
backend/tests/unit/: test_access_token.py  test_websocket_chat.py  test_websocket_connection.py
core/: chat_base.py  chat_model.py  client.py
designs/: autonomous_capabilities.md
docs/: architecture_overview.md  coding.md  development.md  diagram.md  os.md  overview.md  prompt_caching.md  services.md
environment/: .gitignore  README.md  __init__.py  constants.py  container.py  docker_image_utils.py  id_generator.py  logs.py  requirements.txt  run_example.py  task_run.py  utils.py
environment/assets/: entrypoint.sh  run_task.py
evals/: .gitignore  README.md  summarization.py  task_family.py  test_hello_world.py  tool_use.py  tool_use_test.py
evals/hello_world/: hello_world.py  run_hello_world.py  test_hello_world.py
evals/level_3/: add_feature.py
evals/tool_use/: README.md  run_evals.py  run_evals.sh  run_evals_locally.py  tool_use.py  tool_use_test.py
examples/: basic.py
exploration/: chat_completion.py
llm_client/: llm_client.py
memory/: database.py  init_db.py  load_file_memory.py  memory.py  messages_operations.py
models/: __init__.py  message.py  message_param.py  tool_call.py
planning/: __init__.py  planning.py
runner/: README.md  pyproject.toml  run_cue.py  setup.sh
runner/cue_runner/: __init__.py  cli.py  config.py  formatting.py  process_manager.py
runner/cue_runner/commands/: __init__.py  clean.py  kill.py  list.py  start.py  status.py  stop.py
scripts/: analyze_token_usage.sh  format.sh  lint.sh  run.sh  run_evals.sh  setup.sh  test.sh
src/: agent.py  agent_manager.py  chat_completion.py  config.py  main.py
src/core/: chat_base.py
src/cue/: __init__.py  _agent.py  _agent_loop.py  _agent_manager.py  _agent_provider.py  _agent_summarizer.py  _client.py  _version.py  config.py  response_evaluator.py  system_message_builder.py  tool_manager.py
src/llm_client/: __init__.py  anthropic.py  anthropic_client.py  base_client.py  clients.py  gemini_client.py  groq_client.py  llm_client.py  llm_model.py  llm_request.py  openai_client.py  together_client.py
src/memory/: database.py  init_db.py  load_file_memory.py  memory.py  memory_utils.py  messages_operations.py
src/models/: __init__.py  message_param.py  tool_call.py
src/planning/: planning.py
src/schemas/: agent.py  anthropic.py  assistant.py  chat_completion.py  error.py  message.py  message_param.py  request_metadata.py  tool_call.py  tool_message.py
src/tools/: browse_web.json  browse_web.py  execute_shell_command.json  execute_shell_command.py  make_plan.py  manage_drive.json  manage_drive.py  manage_email.py  run_python_script.json  run_python_script.py  tool_manager.py  write_to_file.py
src/utils/: drive_utils.py  email_utils.py  logs.py  (+2 more)
tests/: conftest.py  test_agent.py  test_execute_shell_command.py  test_response_evaluator.py  test_session_manager.py
tools/: __init__.py  available_tools.py  execute_shell_command.json  execute_shell_command.py  read_file.py  run_python_script.py  scan_folder.json  scan_folder.py  tool_manager.py  tools.json  tools.py
utils/: cli_utils.py  console.py  json_utils.py  logs.py
(+187 files in other folders)
